2009-10-04  Chong Yidong  <cyd@stupidchicken.com>

	* cedet/semantic.el (semantic-new-buffer-setup-functions): New
	option.
	(semantic-new-buffer-fcn): Call parser setup functions here.
	(semantic-mode): Don't call parser setup functions here, it's done
	in semantic-new-buffer-fcn now.
	(semantic-mode): Parse all existing buffers when enabled.

	* cedet/srecode/compile.el (srecode-compile-file): Call
	semantic-new-buffer-fcn if the buffer has not been parsed.

2009-10-04  Chong Yidong  <cyd@stupidchicken.com>

	* cedet/ede/pmake.el (ede-pmake-insert-variable-once): Delete.

	* cedet/ede/proj-comp.el: Don't require ede/pmake at toplevel.
	(proj-comp-insert-variable-once): New macro, renamed from
	ede-pmake-insert-variable-once in ede/pmake.edl.
	(ede-proj-makefile-insert-variables): Use it.

2009-10-04  Michael Albinus  <michael.albinus@gmx.de>

	* files.el (copy-directory): New defun.

	* dired-aux.el (dired-copy-file-recursive): Use it.

2009-10-04  Juanma Barranquero  <lekktu@gmail.com>

	* cedet/ede/makefile-edit.el (makefile-beginning-of-command)
	(makefile-end-of-command):
	* cedet/srecode/srt-mode.el (semantic-beginning-of-context)
	(semantic-end-of-context): Fix previous change.  Doc fixes.

2009-10-04  Juanma Barranquero  <lekktu@gmail.com>

	* files-x.el (modify-dir-local-variable)
	(copy-dir-locals-to-file-locals-prop-line):
	* cedet/ede/makefile-edit.el (makefile-beginning-of-command)
	(makefile-end-of-command):
	* cedet/semantic/lex.el (semantic-lex-token):
	* cedet/semantic/analyze/fcn.el
	(semantic-analyze-dereference-metatype-1):
	* cedet/semantic/bovine/c.el (semantic-lex-cpp-define)
	(semantic-lex-cpp-undef):
	* cedet/semantic/wisent/wisent.el (wisent-skip-block):
	* cedet/srecode/srt-mode.el (semantic-beginning-of-context)
	(semantic-end-of-context): Fix typos in docstrings.

	* recentf.el (recentf-unload-function): New function.

2009-10-04  Chong Yidong  <cyd@stupidchicken.com>

	* cedet/ede.el (ede-project-placeholder-cache-file):